# panauricon

./: .gitignore  LICENSE  README  pyproject.toml  settings.toml
panauricon/: __main__.py  recorder.py  settings.py
